--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -9,7 +9,10 @@
   <div class="container mb-3">
 
     <h1 class="m-5 mb-2  text-center">HOT WHEELS</h1>
-    <h4 class="mb-5  text-center">PLACA: ABC-123</h4>
+    <div th:if="${vehiculo.codigo} == '00'">
+
+
+    <h4 class="mb-5  text-center"> Placa <span th:text="${vehiculo.placa}"></span></h4>
 
     <div class="container w-50 mx-auto border border-dark border-3 p-3">
 
@@ -17,27 +20,27 @@
 
           <div class="row">
             <div class="col"> <p class="fs-5"> Marca </p> </div>
-            <div class="col"> <b class="fs-5" > KIA </b> </div>
+            <div class="col"> <b class="fs-5" th:text="${vehiculo.marca}"></b> </div>
           </div>
 
           <div class="row">
             <div class="col"> <p class="fs-5"> Modelo </p> </div>
-            <div class="col"> <b class="fs-5" > Sayayin </b> </div>
+            <div class="col"> <b class="fs-5" th:text="${vehiculo.modelo}"></b> </div>
           </div>
 
           <div class="row">
             <div class="col"> <p class="fs-5"> Asientos </p> </div>
-            <div class="col"> <b class="fs-5" > 5 </b> </div>
+            <div class="col"> <b class="fs-5" th:text="${vehiculo.asientos}" ></b> </div>
           </div>
 
           <div class="row">
             <div class="col"> <p class="fs-5"> Precio </p> </div>
-            <div class="col"> <b class="fs-5" > 2500/S </b> </div>
+            <div class="col"> <b class="fs-5" th:text="${vehiculo.precio}" ></b> </div>
           </div>
 
           <div class="row">
             <div class="col"> <p class="fs-5"> Color </p> </div>
-            <div class="col"> <b class="fs-5" > Negro </b> </div>
+            <div class="col"> <b class="fs-5" th:text="${vehiculo.color}"></b> </div>
           </div>
 
         </div>
@@ -55,6 +58,7 @@
     </div>
 
 
+  </div>
   </div>
 </body>
 </html>
